[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asl-qc-toolbox"
version = "1.0.0"
description = "Advanced Quality Control Toolbox for Arterial Spin Labeling MRI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "OSIPI Task Force 2.2"},
]
keywords = ["ASL", "MRI", "quality-control", "neuroimaging", "perfusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "nibabel>=5.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "SimpleITK>=2.3",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.7"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
asl-qc = "asl_qc.cli:main"

[tool.setuptools.packages.find]
include = ["asl_qc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
